--- a/view/frontend/templates/checkout/fail.phtml
+++ b/view/frontend/templates/checkout/fail.phtml
@@ -5,13 +5,13 @@
 /**
  * @var $this \Orba\Payupl\Block\Checkout\Fail
  */
-$repeatPaymentUrl = $this->getRepeatPaymentUrl();
+$paymentUrl = $this->getPaymentUrl();
 ?>
 <div class="message info">
     <div>
-        <?php echo __('Your payment was rejected.'); ?>
-        <?php if ($repeatPaymentUrl): ?>
-        <a href="<?php echo $repeatPaymentUrl; ?>" title="<?php echo __('Click here to repeat payment.'); ?>"><?php echo __('Click here to repeat payment.'); ?></a>
+        <?php echo __('There was a problem with payment.'); ?>
+        <?php if ($paymentUrl): ?>
+        <a href="<?php echo $paymentUrl; ?>" title="<?php echo __('Click here to repeat payment.'); ?>"><?php echo __('Click here to repeat payment.'); ?></a>
         <?php endif; ?>
     </div>
 </div>
