--- a/view/frontend/templates/payment/repeat/fail.phtml
+++ b/view/frontend/templates/payment/repeat/fail.phtml
@@ -5,12 +5,12 @@
 /**
  * @var $this \Orba\Payupl\Block\Payment\Repeat\Fail
  */
-$repeatPaymentUrl = $this->getRepeatPaymentUrl();
+$repeatPaymentUrl = $this->getPaymentUrl();
 ?>
 <?php if ($repeatPaymentUrl): ?>
 <div class="message info">
     <div>
-        <?php echo __('Your payment was rejected.'); ?>
+        <?php echo __('There was a problem with payment.'); ?>
         <?php if ($repeatPaymentUrl): ?>
             <a href="<?php echo $repeatPaymentUrl; ?>" title="<?php echo __('Click here to repeat payment.'); ?>"><?php echo __('Click here to repeat payment.'); ?></a>
         <?php endif; ?>
