--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -5,6 +5,9 @@
  */
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">
+    <head>
+        <css src="css/styles.css" />
+    </head>
     <body>
         <referenceContainer name="after.body.start">
             <block class="Magento\Framework\View\Element\Template" name="payupl.translate" template="Orba_Payupl::translate.phtml"/>
