--- a/view/frontend/web/template/payment/payupl.html
+++ b/view/frontend/web/template/payment/payupl.html
@@ -13,6 +13,14 @@
     </div>
 
     <div class="payment-method-content">
+        <div class="orba-payupl-paytypes">
+            <!-- ko foreach: getPaytypes() -->
+            <div class="orba-payupl-paytype">
+                <input type="radio" name="payment[additional_data][paytype]" class="radio" data-bind="value: $data.type, attr: {'id': $data.id}" />
+                <label data-bind="attr: {'for': $data.id}" class="label"><span><img data-bind="attr: {'src': $data.img, 'alt': $data.name, 'title': $data.name}" /></span></label>
+            </div>
+            <!--/ko-->
+        </div>
         <div class="payment-method-billing-address">
             <!-- ko foreach: $parent.getRegion(getBillingAddressFormName()) -->
             <!-- ko template: getTemplate() --><!-- /ko -->
