Minor fixes after upgrade to Magento 2.2/2.3

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -9,6 +9,7 @@
       height: 50px;
       display: inline-block;
       vertical-align: middle;
+      margin-right: 20px;
     }
     input {
       vertical-align: middle;
